--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ jvm-target= "17"
 navigation-compose = "2.8.0"
 appcompat = "1.7.0"
 material = "1.12.0"
+viewmodel = "2.8.7"
+lifecycle = "2.8.7"
+
 
 
 
@@ -38,6 +41,10 @@ lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+viewmodel-lifecycle = { group ="androidx.lifecycle", name ="lifecycle-viewmodel-compose",version.ref="viewmodel" }
+lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+
+
 
 
 
@@ -50,6 +57,6 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 
 
 [bundles]
-androidx = [ "androidx-core-ktx" , "androidx-lifecycle-runtime-ktx"]
+androidx = [ "androidx-core-ktx" , "androidx-lifecycle-runtime-ktx","viewmodel-lifecycle", "lifecycle-viewmodel-ktx"]
 compose = ["androidx-activity-compose","lottie-compose" ,"androidx-ui", "androidx-ui-graphics", "androidx-ui-tooling-preview", "androidx-material3", "navigation-compose"]
 compose-debug = ["androidx-ui-tooling", "androidx-ui-test-manifest"]
